--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>vai ser uma imagem aqui</h1>
-    <ul>
-        <li>Estudante</li>
-        <li>Escola</li>
+<header class="cabecalho"> 
+    <img class="cabecalho-imagem" src="./img/images.png" alt="ciência">
+    <ul class="cabecalho-lista-item">
+        <li class="cabecalho-lista-item">Estudante</li>
+        <li class="cabecalho-lista-item">Escola</li>
     </ul>
+</header>
+
+<body>
+
 </body>
 </html>
