--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
 <header class="cabecalho"> 
     <img class="cabecalho-imagem" src="./img/images.png" alt="ciência">
     <ul class="cabecalho-lista-item">
@@ -14,8 +15,13 @@
         <li class="cabecalho-lista-item">Escola</li>
     </ul>
 </header>
+<section class="escola">
+    <h2 class="escola-titulo">Sobre a escola</h2>
+        <p class="escola-texto-um">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fugit dolorem assumenda dolore, repudiandae corrupti. Quo mollitia nam, veritatis maxime sit asperiores repudiandae nisi, eligendi provident at debitis est vero.</p>
+        <p class="escola-texto-um">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, harum! Nihil voluptas nulla quia voluptatibus nostrum hic perferendis sint neque quibusdam corrupti, veniam animi nemo laborum! Eius dolorem architecto maiores?</p>
+    <img class="imagem-escola" src="./img/Coding workshop-amico.png">
+    </section>
 
-<body>
 
 </body>
 </html>
