--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     </ul>
 </header>
 <section class="escola">
+    <div class="escola-conteudo">
     <h2 class="escola-titulo">Sobre a escola</h2>
         <p class="escola-texto-um">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fugit dolorem assumenda dolore, repudiandae corrupti. Quo mollitia nam, veritatis maxime sit asperiores repudiandae nisi, eligendi provident at debitis est vero.</p>
-        <p class="escola-texto-um">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, harum! Nihil voluptas nulla quia voluptatibus nostrum hic perferendis sint neque quibusdam corrupti, veniam animi nemo laborum! Eius dolorem architecto maiores?</p>
-    <img class="imagem-escola" src="./img/Coding workshop-amico.png">
-    </section>
+        <p class="escola-texto-dois">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, harum! Nihil voluptas nulla quia voluptatibus nostrum hic perferendis sint neque quibusdam corrupti, veniam animi nemo laborum! Eius dolorem architecto maiores?</p>
+        <img class="imagem-escola" src="./img/Coding workshop-amico.png" alt="imagem de uma escola de programação"> 
+    </div>
+</section>
 
 
 </body>
