--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,11 +20,11 @@
 </header>
 <section class="escola">
     <div class="escola-conteudo">
-    <h2 class="escola-titulo">Sobre a escola</h2>
-        <p class="escola-texto-um">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero fugit dolorem assumenda dolore, repudiandae corrupti. Quo mollitia nam, veritatis maxime sit asperiores repudiandae nisi, eligendi provident at debitis est vero.</p>
-        <p class="escola-texto-dois">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, harum! Nihil voluptas nulla quia voluptatibus nostrum hic perferendis sint neque quibusdam corrupti, veniam animi nemo laborum! Eius dolorem architecto maiores?</p>
-        <img class="imagem-escola" src="./img/Coding workshop-amico.png" alt="imagem de uma escola de programação"> 
+    <h2 class="escola-titulo">Ciência</h2>
+        <p class="escola-texto-um">Ciência é o conhecimento que explica os fenômenos obedecendo as leis que foram verificadas por métodos experimentais. É um método de aquisição de conhecimento com base, no conhecido, método científico.</p>
+        <p class="escola-texto-dois">A ciência visa a obtenção de um conhecimento específico, baseado na observação, realização de experimentos e a formulação, desenvolvimento de teorias e leis.</p>
     </div>
+    <img class="imagem-escola" src="./img/Coding workshop-amico.png" alt="imagem de uma escola de programação"> 
 </section>
 
 
