--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     <img class="imagem-escola" src="./img/Coding workshop-amico.png" alt="imagem de uma escola de programação"> 
 </section>
 
+<section class="estudante">
+
+<h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+<img class="estudante-imagem" src="./img/depositphotos_216201272-stock-photo-glowing-gold-blue-atom-model.jpg" alt="imagem de áreas da ciência">
+<h3>Ciência</h3>
+<img class="estudante-icone" src="./img/Molecules-Chemistry-PNG-Photos.png" alt="imagem de áreas da ciência">
+<img class="estudante-icone" src="./img/_109347319_gettyimages-611195980.jpg" alt="imagem de áreas da ciência">
+<img class="estudante-icone" src="./img/curiosidades-sobre-o-sistema-solar-31-fatos-sobre-nosso-lar-espacial-1024x576.jpg" alt="imagem de áreas da ciência">
+</section>
 
 </body>
 </html>
