--- a/index.html
+++ b/index.html
@@ -30,12 +30,26 @@
 <section class="estudante">
 
 <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
+
+<div clas="ciencia-todos">
+
+<div clas="ciencia-div">
 <img class="estudante-imagem" src="./img/depositphotos_216201272-stock-photo-glowing-gold-blue-atom-model.jpg" alt="imagem de áreas da ciência">
 <h3>Ciência</h3>
-<img class="estudante-icone" src="./img/Molecules-Chemistry-PNG-Photos.png" alt="imagem de áreas da ciência">
-<img class="estudante-icone" src="./img/_109347319_gettyimages-611195980.jpg" alt="imagem de áreas da ciência">
-<img class="estudante-icone" src="./img/curiosidades-sobre-o-sistema-solar-31-fatos-sobre-nosso-lar-espacial-1024x576.jpg" alt="imagem de áreas da ciência">
-</section>
+<img class="estudante-icone" src="./img/Molecules-Chemistry-PNG-Photos.png" alt="icone intagram">
+<img class="estudante-icone" src="./img/_109347319_gettyimages-611195980.jpg" alt="icone facebook">
+<img class="estudante-icone" src="./img/curiosidades-sobre-o-sistema-solar-31-fatos-sobre-nosso-lar-espacial-1024x576.jpg" alt="icone tik-tok">
+</div>
+
+<div clas="ciencia-div">
+<img class="estudante-imagem" src="./img/depositphotos_216201272-stock-photo-glowing-gold-blue-atom-model.jpg" alt="imagem de áreas da ciência">
+<h3>Ciência</h3>
+<img class="estudante-icone" src="./img/Molecules-Chemistry-PNG-Photos.png" alt="icone intagram">
+<img class="estudante-icone" src="./img/_109347319_gettyimages-611195980.jpg" alt="icone facebook">
+<img class="estudante-icone" src="./img/curiosidades-sobre-o-sistema-solar-31-fatos-sobre-nosso-lar-espacial-1024x576.jpg" alt="icone tik-tok">
+</div>
+
+</div>
 
 </body>
 </html>
