--- a/index.html
+++ b/index.html
@@ -33,23 +33,53 @@
 
 <div clas="ciencia-todos">
 
-<div clas="ciencia-div">
+<div class="ciencia-div">
 <img class="estudante-imagem" src="./img/depositphotos_216201272-stock-photo-glowing-gold-blue-atom-model.jpg" alt="imagem de áreas da ciência">
 <h3>Ciência</h3>
-<img class="estudante-icone" src="./img/Molecules-Chemistry-PNG-Photos.png" alt="icone intagram">
-<img class="estudante-icone" src="./img/_109347319_gettyimages-611195980.jpg" alt="icone facebook">
-<img class="estudante-icone" src="./img/curiosidades-sobre-o-sistema-solar-31-fatos-sobre-nosso-lar-espacial-1024x576.jpg" alt="icone tik-tok">
+<a href="https://www.instagram.com/">
+   <img class="estudante-icone" src="./img/717392.png" alt="icone intagram">
+    </a>
+    <a href="https://pt-br.facebook.com/">
+    <img class="estudante-icone" src="./img/747374.png" alt="icone facebook">
+    </a>
+    <a href="https://www.tik-tok.com/">
+    <img class="estudante-icone" src="./img/2190430.png" alt="icone tik-tok">
+</a>
 </div>
 
-<div clas="ciencia-div">
-<img class="estudante-imagem" src="./img/depositphotos_216201272-stock-photo-glowing-gold-blue-atom-model.jpg" alt="imagem de áreas da ciência">
-<h3>Ciência</h3>
-<img class="estudante-icone" src="./img/Molecules-Chemistry-PNG-Photos.png" alt="icone intagram">
-<img class="estudante-icone" src="./img/_109347319_gettyimages-611195980.jpg" alt="icone facebook">
-<img class="estudante-icone" src="./img/curiosidades-sobre-o-sistema-solar-31-fatos-sobre-nosso-lar-espacial-1024x576.jpg" alt="icone tik-tok">
+<div class="ciencia-div">
+    <img class="estudante-imagem" src="./img/depositphotos_216201272-stock-photo-glowing-gold-blue-atom-model.jpg" alt="imagem de áreas da ciência">
+    <h3>Ciência</h3>
+    <a href="https://www.instagram.com/">
+    <img class="estudante-icone" src="./img/717392.png" alt="icone intagram">
+    </a>
+    <a href="https://pt-br.facebook.com/">
+    <img class="estudante-icone" src="./img/747374.png" alt="icone facebook">
+    </a>
+    <a href="https://www.tik-tok.com/">
+    <img class="estudante-icone" src="./img/2190430.png" alt="icone tik-tok">
+</a>
+</div>
+
+<div class="ciencia-div">
+    <img class="estudante-imagem" src="./img/depositphotos_216201272-stock-photo-glowing-gold-blue-atom-model.jpg" alt="imagem de áreas da ciência">
+    <h3>Ciência</h3>
+    <a href="https://www.instagram.com/">
+<img class="estudante-icone" src="./img/717392.png" alt="icone intagram">
+    </a>
+    <a href="https://pt-br.facebook.com/">
+    <img class="estudante-icone" src="./img/747374.png" alt="icone facebook">
+    </a>
+    <a href="https://www.tik-tok.com/">
+    <img class="estudante-icone" src="./img/2190430.png" alt="icone tik-tok">
+</a>
 </div>
 
 </div>
+
+
+
+</section>
 
 </body>
 </html>
